--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="radial">
         <div class="radial__hand">
             <img src="./styles/fondo.png" id="fondo" alt="fondo">
-            <img src="./styles/manecilla.png" id="hand" alt="manecilla">
+            <img src="./styles/manecilla.png" class="hand" alt="manecilla">
             <p>Numero</p>
         </div>
     </div>
